Change test example

--- a/re-hs.cabal
+++ b/re-hs.cabal
@@ -69,7 +69,8 @@ Test-Suite test
                   , QuickCheck             
                   , tasty                  
                   , tasty-quickcheck
-                  , bytestring   
+                  , bytestring
+                  , primitive
 
 
   other-modules:                        
