Start using primitive-checked to figure out weird segmentation fault issue

--- a/re-hs.cabal
+++ b/re-hs.cabal
@@ -35,7 +35,8 @@ Library
                     -fllvm
 
   build-depends:    base      
-                  , primitive
+--                  , primitive
+                  , primitive-checked
                   , bytestring
                   , bitvec
                   , ghc-prim
